package com.irina.myfirstgame.world;

import com.irina.myfirstgame.entities.valueobjects.Vector2;
import java.util.Set;

/**
 * Grille de collision pour optimiser la détection de collisions.
 * <p>
 * Stub pour une fonctionnalité future d'optimisation des collisions.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class CollisionGrid {
    private Set<Vector2> occupied;
    
    public boolean isOccupied(Vector2 position) {
        return false;
    }
    
    public void mark(Vector2 position) {
    }
    
    public void clear(Vector2 position) {
    }
}

