package com.irina.myfirstgame.world;

/**
 * Charge les niveaux depuis des fichiers.
 * <p>
 * Stub pour une fonctionnalité future de chargement de niveaux.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class LevelLoader {
    public Level load(String id) {
        return null;
    }
    
    public Map buildMap(Level level) {
        return null;
    }
}

