package com.irina.myfirstgame.world.valueobjects;

import com.irina.myfirstgame.world.Tile;
import java.util.List;

/**
 * Collection de tuiles.
 * <p>
 * Stub pour une fonctionnalité future de gestion de collections de tuiles.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class TileCollection {
    public List<Tile> tiles;
}

