@startuml
skinparam classAttributeIconSize 0
hide circle

class Map {
  -tiledMap: TiledMap
  -tiles: TileCollection
  -tileWidth: int
  -tileHeight: int
  -mapWidth: int
  -mapHeight: int
  --
  +Map(tmxFile: String)
  +load(tmxFile: String): void
  +getTiledMap(): TiledMap
  +getLayer(layerName: String): TiledMapTileLayer
  +getTileAt(position: Vector2): Tile
  +isSolidAt(tileX: int, tileY: int, layerName: String): boolean
  -isSolidProperty(solid: Object): boolean
  +isSolidAt(worldX: float, worldY: float, layerName: String): boolean
  +calculateSurfaceLevel(layerName: String): float
  +getTileWidth(): int
  +getTileHeight(): int
  +getMapWidthPixels(): int
  +getMapHeightPixels(): int
  +dispose(): void
}

class SpawnRules {
  +enemies: SpawnTable
  +resources: SpawnTable
  --
  +SpawnRules()
}

class World {
  -map: Map
  -collisions: CollisionGrid
  -camera: Camera
  -spawner: Spawner
  -spawnerObject: SpawnerObject
  -spawnManager: SpawnManager
  -scoreManager: com.irina.myfirstgame.systems.ScoreManager
  -levelLoader: LevelLoader
  -physics: Physics
  -mapRenderer: OrthogonalTiledMapRenderer
  -pieKilledCallback: Runnable
  -deathCauseCallback: java.util.function.Consumer<String>
  -collisionLayerName: String
  -boundPlayer: Player
  -enemies: List<Enemy> = new ArrayList<>()
  -enemiesToRemove: List<Enemy> = new ArrayList<>()
  -items: List<Item> = new ArrayList<>()
  -projectiles: List<Projectile> = new ArrayList<>()
  -surfaceLevel: float
  -enemyCollisionHandler: com.irina.myfirstgame.systems.CollisionHandler
  -damageCooldown: float = 0f
  --
  +World(mapFile: String, viewportWidth: float, viewportHeight: float)
  +World(mapFile: String, viewportWidth: float, viewportHeight: float, collisionLayerName: String)
  +update(delta: float): void
  -checkProjectileEnemyCollision(projectile: Projectile, enemy: Enemy): boolean
  -handleItemCollection(): void
  -handleEnemyCollisions(): void
  +render(): void
  +renderEnemies(batch: SpriteBatch): void
  +getMap(): Map
  +getCamera(): Camera
  +getCollisionGrid(): CollisionGrid
  +getSpawner(): Spawner
  +getSpawnerObject(): SpawnerObject
  +getSpawnManager(): SpawnManager
  +setSpawnManager(spawnManager: SpawnManager): void
  +getScoreManager(): com.irina.myfirstgame.systems.ScoreManager
  +setScoreManager(scoreManager: com.irina.myfirstgame.systems.ScoreManager): void
  +setPieKilledCallback(callback: Runnable): void
  +setDeathCauseCallback(callback: java.util.function.Consumer<String>): void
  +getEnemies(): List<Enemy>
  +getItems(): List<Item>
  +getLevelLoader(): LevelLoader
  +getPhysics(): Physics
  +getSurfaceLevel(): float
  +getCollisionLayerName(): String
  +setCollisionLayer(collisionLayerName: String): void
  +bindPlayer(player: Player): void
  +spawnInitialEnemies(assets: Assets): void
  +spawnInitialItems(assets: Assets): void
  +spawnDiamond(assets: Assets): void
  +addItem(item: Item): void
  +addProjectile(projectile: Projectile): void
  +renderItems(batch: SpriteBatch): void
  +renderProjectiles(batch: SpriteBatch, assets: Assets): void
  +dispose(): void
}

abstract class Tile {
  +isBlocking(): boolean
  +isDiggable(): boolean
}

class Sky {
}

class Dirt {
  +hardness: float
  --
  +dig(): void
}

class PipeTunnel {
  +connect(surface: Surface, underworld: Underworld): void
}

class DeepDirt {
  +luminosity: float
  --
  +dig(): void
}

class Underworld {
  +depth: int
  +density: float
}

class CollisionGrid {
  -occupied: Set<Vector2>
  --
  +isOccupied(position: Vector2): boolean
  +mark(position: Vector2): void
  +clear(position: Vector2): void
}

class Surface {
  +skyColor: String
  +hazardLevel: int
}

class Camera {
  -libgdxCamera: OrthographicCamera
  -viewport: Viewport
  -target: Player
  -viewportWidth: float
  -viewportHeight: float
  --
  +Camera(viewportWidth: float, viewportHeight: float)
  +setViewport(viewport: Viewport): void
  +follow(player: Player): void
  +update(delta: float): void
  +clampTo(map: Map): void
  +getLibgdxCamera(): OrthographicCamera
  +setPosition(x: float, y: float): void
  +updateViewport(width: int, height: int): void
  +getViewport(): Viewport
}

class Level {
  -name: String
  -difficulty: int
  -spawnRules: SpawnRules
  --
  +getSpawnRules(): SpawnRules
}

class LevelLoader {
  +load(id: String): Level
  +buildMap(level: Level): Map
}

class SpawnTable {
  +entries: Map<String, Float>
  --
  +random(): String
}

class TileCollection {
  +tiles: List<Tile>
}

Map *-- TileCollection
Map ..> Tile
SpawnRules *-- SpawnTable
World *-- Map
World *-- CollisionGrid
World *-- Camera
World *-- LevelLoader
Sky --|> Tile
Dirt --|> Tile
PipeTunnel --|> Tile
PipeTunnel ..> Surface
PipeTunnel ..> Underworld
DeepDirt --|> Tile
Camera ..> Map
Level *-- SpawnRules
LevelLoader ..> Level
LevelLoader ..> Map
SpawnTable o-- Map
TileCollection o-- Tile
@enduml